<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/home"/>

    <item
        android:id="@+id/navigation_bookmark"
        android:icon="@drawable/bookmarks"
        android:title="@string/bookmark"/>

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/map"
        android:title="@string/map" />

    <item
        android:id="@+id/navigation_chatbot"
        android:icon="@drawable/chatbot"
        android:title="Chatbot" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/settings"
        android:title="@string/settings" />

</menu>