<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".dashboardNavigationFragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- UI Elements Above the Fragment Container -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#F9F2EF"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Greeting Section -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_greet"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/raleway_bold"
                        android:text="Hello, User"
                        android:gravity="center_vertical"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold"/>

                    <ImageView
                        android:id="@+id/img_profile"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:src="@drawable/logo"
                        android:layout_marginEnd="8dp"
                        android:backgroundTint="@android:color/transparent"
                        android:clipToOutline="true"
                        android:contentDescription="@string/userProfile"
                        android:elevation="4dp"
                        android:scaleType="centerCrop" />

                </LinearLayout>


                <TextView
                    android:id="@+id/tvSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/raleway_bold"
                    android:text="@string/exploreMsg"
                    android:textColor="@color/gray"
                    android:textSize="14sp"
                    android:textStyle="" />

                <!-- Search Bar -->


                <!-- Explore Cities Section -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/search_bar_background"
                    android:elevation="4dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <AutoCompleteTextView
                        android:id="@+id/auto_complete_search"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:drawablePadding="8dp"
                        android:fontFamily="@font/raleway_bold"
                        android:hint="@string/searchText"
                        android:imeOptions="actionSearch"
                        android:inputType="text"
                        android:padding="12dp"
                        android:textColor="@android:color/black"
                        android:textColorHint="#808080"
                        android:textSize="16sp" />

                    <ImageView
                        android:id="@+id/btnSearch"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/search_icon"
                        android:hint="@string/search"
                        android:padding="8dp"
                        android:src="@drawable/search_icon"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp"
                        app:tint="@color/primaryColor" />


                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:textSize="@dimen/_12ssp"
                    android:fontFamily="@font/raleway_bold"
                    android:text="@string/exploreMsg"/>

                <!-- Carousel using ViewPager2 -->
                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/view_pager_carousel"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="16dp" />

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <TextView
                        android:id="@+id/tvExploreCities"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:elevation="4dp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/raleway_bold"
                        android:padding="3dp"
                        android:text="Juhu beach"
                        android:textSize="@dimen/_16ssp"
                        android:textStyle="bold" />



                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/lineChart"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_120sdp"
                        android:layout_marginVertical="@dimen/_10sdp" />



                </LinearLayout>



                <TextView
                    android:id="@+id/msg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Not safe to visit"
                    android:layout_gravity="center"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold"/>



<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:orientation="vertical">-->


<!--                    <androidx.cardview.widget.CardView-->
<!--                        android:id="@+id/btnGoa"-->
<!--                        android:layout_margin="@dimen/_5sdp"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        app:cardElevation="@dimen/_4sdp"-->
<!--                        app:cardBackgroundColor="@color/cardColor"-->
<!--                        app:cardCornerRadius="@dimen/_5sdp">-->

<!--                        <androidx.constraintlayout.widget.ConstraintLayout-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="@dimen/_30sdp">-->

<!--                            <TextView-->
<!--                                android:layout_width="wrap_content"-->
<!--                                android:layout_height="wrap_content"-->
<!--                                android:text="Goa"-->
<!--                                android:layout_margin="@dimen/_3sdp"-->
<!--                                android:textColor="@color/white"-->
<!--                                android:textSize="@dimen/_20ssp"-->
<!--                                android:textStyle="bold"-->
<!--                                app:layout_constraintTop_toTopOf="parent"-->
<!--                                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                                app:layout_constraintEnd_toEndOf="parent"-->
<!--                                app:layout_constraintStart_toStartOf="parent" />-->

<!--                        </androidx.constraintlayout.widget.ConstraintLayout>-->


<!--                    </androidx.cardview.widget.CardView>-->


<!--                    <androidx.cardview.widget.CardView-->
<!--                        android:id="@+id/btnMaharashtra"-->
<!--                        android:layout_margin="@dimen/_5sdp"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        app:cardElevation="@dimen/_4sdp"-->
<!--                        app:cardBackgroundColor="@color/cardColor"-->
<!--                        app:cardCornerRadius="@dimen/_5sdp">-->

<!--                        <androidx.constraintlayout.widget.ConstraintLayout-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="@dimen/_30sdp">-->

<!--                            <TextView-->
<!--                                android:layout_width="wrap_content"-->
<!--                                android:layout_height="wrap_content"-->
<!--                                android:text="Maharashtra"-->
<!--                                android:layout_margin="@dimen/_3sdp"-->
<!--                                android:textColor="@color/white"-->
<!--                                android:textSize="@dimen/_20ssp"-->
<!--                                android:textStyle="bold"-->
<!--                                app:layout_constraintTop_toTopOf="parent"-->
<!--                                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                                app:layout_constraintEnd_toEndOf="parent"-->
<!--                                app:layout_constraintStart_toStartOf="parent" />-->

<!--                        </androidx.constraintlayout.widget.ConstraintLayout>-->


<!--                    </androidx.cardview.widget.CardView>-->

<!--<androidx.cardview.widget.CardView-->
<!--                        android:id="@+id/btnChennai"-->
<!--                        android:layout_margin="@dimen/_5sdp"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        app:cardElevation="@dimen/_4sdp"-->
<!--                        app:cardBackgroundColor="@color/cardColor"-->
<!--                        app:cardCornerRadius="@dimen/_5sdp">-->

<!--                        <androidx.constraintlayout.widget.ConstraintLayout-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="@dimen/_30sdp">-->

<!--                            <TextView-->
<!--                                android:layout_width="wrap_content"-->
<!--                                android:layout_height="wrap_content"-->
<!--                                android:text="Chennai"-->
<!--                                android:layout_margin="@dimen/_3sdp"-->
<!--                                android:textColor="@color/white"-->
<!--                                android:textSize="@dimen/_20ssp"-->
<!--                                android:textStyle="bold"-->
<!--                                app:layout_constraintTop_toTopOf="parent"-->
<!--                                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                                app:layout_constraintEnd_toEndOf="parent"-->
<!--                                app:layout_constraintStart_toStartOf="parent" />-->

<!--                        </androidx.constraintlayout.widget.ConstraintLayout>-->


<!--                    </androidx.cardview.widget.CardView>-->

<!--<androidx.cardview.widget.CardView-->
<!--                        android:id="@+id/btnGujarat"-->
<!--                        android:layout_margin="@dimen/_5sdp"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        app:cardElevation="@dimen/_4sdp"-->
<!--                        app:cardBackgroundColor="@color/cardColor"-->
<!--                        app:cardCornerRadius="@dimen/_5sdp">-->

<!--                        <androidx.constraintlayout.widget.ConstraintLayout-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="@dimen/_30sdp">-->

<!--                            <TextView-->
<!--                                android:layout_width="wrap_content"-->
<!--                                android:layout_height="wrap_content"-->
<!--                                android:text="Gujarat"-->
<!--                                android:layout_margin="@dimen/_3sdp"-->
<!--                                android:textColor="@color/white"-->
<!--                                android:textSize="@dimen/_20ssp"-->
<!--                                android:textStyle="bold"-->
<!--                                app:layout_constraintTop_toTopOf="parent"-->
<!--                                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                                app:layout_constraintEnd_toEndOf="parent"-->
<!--                                app:layout_constraintStart_toStartOf="parent" />-->

<!--                        </androidx.constraintlayout.widget.ConstraintLayout>-->


<!--                    </androidx.cardview.widget.CardView>-->


<!--                </LinearLayout>-->


                <!--                <com.github.mikephil.charting.charts.BarChart-->
                <!--                    android:id="@+id/bar_chart"-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="200dp"-->
                <!--                    android:layout_marginTop="8dp" />-->

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
